# un-t-ann-gle

./: .gitignore  Makefile  README.md  body-types.lst  div-pb.json  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: 9.  TEI experiment-implement API's for anchors and isolate them in seperate package-checkpoint.ipynb
bak/: requirements.txt  setup.py
conf/: conf-0.8.5.yml  test-conf.yml
data/: .gitignore  1728-06-19-annotationstore.json  1728_pres.json  all_annotations.json  all_tei_textlines.json  all_textlines.json  all_textlines.txt  config.json  delegats.json  image-to-canvas.csv  listxmltags.py  manifest.json  mondriaan-anno.tsv  mondriaan-text.txt
docs/: conversion_2022-07.md
notebooks/: 01. republic extract text coordinates from session json.ipynb  02 republic  combine split and search a number of session days.ipynb  04.  analoge exercitie voor een DBNL TEI document.ipynb  05. generalise - republic  combine split and search a number of session days.ipynb  07. merge sheet 5 and 6 - resolutions from Marijn iso manually created.ipynb  08.  TEI experiment-add text slot indirection.ipynb  10.  TEI experiment-add RESTful endpoints and service.ipynb  10.1. TEI experiment-add RESTful endpoints and service (use packages).ipynb  11. Republic un-t-ann-gle processing using a SegmentedText subclass.ipynb  11.1. Republic un-t-ann-gle processing using a SegmentedText subclass.ipynb  3. refactor - republic  combine split and search a number of session days.ipynb  Test title selection criteria DBNL Folia 2.0.ipynb  Untitled1.ipynb  Untitled2.ipynb  all_tei_textlines.json  all_tei_textlines.txt  annotation_client.ipynb  flask_client.ipynb  flask_server.ipynb  junk rest client.ipynb  textrepo-client.ipynb
republic-untanngle-scripts/: 01. Haal data voor 1728 uit Marijns indexen.ipynb  harvest-sessions-from-CAF.ipynb  harvest_from_caf.py  untanngle.py
scripts/: caf-harvest.py  convert-to-web-annotations.py  convert_to_web_annotations-old.py  convert_to_web_annotations.py  editem-watm-untangler.py  es-test.py  export_to_elucidate.py  generate-context-file.py  make-fingerprint-from-es-mapping.py  read-conf.py  rp-analyze-ner-annotations.py  rp-convert-to-web-annotations.py  rp-extract-image-to-canvas.sh  rp-extract-volume-data.py  rp-list-new-annotation-files.sh  rp-upload-annotations.sh  show-undefined-properties-in-json-ld.py  tf-list-watm-versions.py  tf-to-tr-ar.py  upload-to-annorepo.py  ut-convert-israels.py  ut-convert-mondriaan.py  ut-convert-suriano.py  ut-convert-translatin.py  ut-convert-vangogh.py  ut-count-body-type.py  ut-list-custom-annotation-fields.py  ut-post-provenance.py  ut-prepare-intro-text-israels.py  ut-run-republic-pipeline-for-year.sh  ut-untanngle-republic.py  ut-untanngle.py  ut-untanngle0.py  ut-upload-mondriaan-segmented-text.py  ut-upload-textstores.py  ut-upload-web-annotation-metadata.py  ut-upload-web-annotations.py
test/: test_annotations.py  test_camel_casing.py  test_segmentedtext.py  test_text_repo_client.py  test_utils.py  (+1 more)
(+778 files in other folders)
