[tool.poetry]
name = "untanngle"
version = "0.1.0"
description = ""
authors = ["Bram Buitendijk <bram.buitendijk@di.huc.knaw.nl>"]
readme = "README.md"
packages = [{ include = "untanngle" }]

[tool.poetry.dependencies]
python = "^3.11"
dataclasses-json = "^0.5.7"
icecream = "^2.1.3"
loguru = "^0.7.0"
rdflib = "^6.2.0"
requests = "^2.28.2"
rfc3987 = "^1.3.8"
textrepo-client = "^0.5.1"
#uri = "^3.0.0"
uri = { git = "https://github.com/marrow/uri.git", rev = "5b58db87451ca4680004a8993a56bfc4dafff4d4" }
setuptools = "^67.8.0"
pygithub = "^1.58.2"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
annorepo-client = {path = "/Users/bram/workspaces/elucidate/annorepo-client"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
