[tool.poetry]
name = "untanngle"
version = "0.1.2"
description = ""
authors = ["Bram Buitendijk <bram.buitendijk@di.huc.knaw.nl>","Hennie Brugman <hennie.brugman@di.huc.knaw.nl>"]
readme = "README.md"
packages = [{ include = "untanngle" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dataclasses-json = "^0.5.14"
icecream = "^2.1.3"
loguru = "^0.7.0"
rdflib = "^7.0.0"
requests = "^2.31.0"
rfc3987 = "^1.3.8"
textrepo-client = "^0.5.1"
#uri = "^3.0.0"
uri = { git = "https://github.com/marrow/uri.git", rev = "5b58db87451ca4680004a8993a56bfc4dafff4d4" }
setuptools = "^69.0.0"
pygithub = "^2.2.0"
pyyaml = "^6.0"
elasticsearch7 = "^7.17.9"
stam = "^0.5.0"
alive-progress = "^3.1.4"
progressbar2 = "^4.2.0"
intervaltree = "^3.1.0"

[tool.poetry.group.dev.dependencies]
annorepo-client = { path = "/Users/bram/workspaces/annorepo/annorepo-client", develop = true }
provenance-client = { path = "/Users/bram/workspaces/provenance/provenance-python-client", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
