[tool.poetry]
name = "untanngle"
version = "0.1.2"
description = ""
authors = ["Bram Buitendijk <bram.buitendijk@di.huc.knaw.nl>","Hennie Brugman <hennie.brugman@di.huc.knaw.nl>"]
readme = "README.md"
packages = [{ include = "untanngle" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

alive-progress = "^3.1.4"
dataclasses-json = "^0.6.7"
icecream = "^2.1.3"
intervaltree = "^3.1.0"
loguru = "^0.7.0"
progressbar2 = "^4.2.0"
pygithub = "^2.2.0"
pyyaml = "^6.0"
rdflib = "^7.0.0"
requests = "^2.31.0"
rfc3987 = "^1.3.8"
setuptools = "^80.8.0"
stam = "^0.10.2"
textrepo-client = "^0.6.0"
#uri = "^3.0.0"
uri = { git = "https://github.com/marrow/uri.git", rev = "5b58db87451ca4680004a8993a56bfc4dafff4d4" }

[tool.poetry.group.dev.dependencies]
annorepo-client = { path = "/Users/bram/workspaces/annorepo/annorepo-client", develop = true }
provenance-client = { path = "/Users/bram/workspaces/provenance/provenance-python-client", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
